--- a/styles/index.css
+++ b/styles/index.css
@@ -22,3 +22,44 @@ gap : 20%}
     background-repeat: no-repeat;
     background-position: center;
 }
+
+
+
+.carousel-container {
+  width: 80%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-images {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.carousel-image {
+  flex: 0 0 25%; /* Changer la valeur pour ajuster la taille des images */
+  margin-right: 10px; /* Espacement entre les images */
+  border: 2px solid black; /* Ajout d'un cadre noir autour des images */
+}
+
+.carousel-nav-left,
+.carousel-nav-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.carousel-nav-left {
+  left: 10px;
+}
+
+.carousel-nav-right {
+  right: 10px;
+}
+
