--- a/styles/index.css
+++ b/styles/index.css
@@ -39,17 +39,28 @@ h3{
   align-items: center;
   justify-content: center;
   gap : 20px;
+  
 }
 
 .carousel-images{
     width: 90vh;
     display: flex;
     overflow: hidden;
-    gap : 10px;
     justify-content: center;
     align-items: center;
     border: solid red 5px;
     padding: 20px;
+    height: 20vh;
+}
+
+.carousel_img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-color: solid black 5px;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
