--- a/styles/index.css
+++ b/styles/index.css
@@ -65,5 +65,66 @@ h3{
 
 
 
+/* MODALE */
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.poster {
+  width: 200px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
 
 
+.genre, .duration, .rating, .imdb_score ,.release_date {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.director, .actors, .box_office, .origin {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
