--- a/styles/index.css
+++ b/styles/index.css
@@ -18,20 +18,40 @@ gap : 20%}
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 25vh;
+  background-color:black;
+  margin: 20px 15vh 20px 15vh;
+  padding: 20px;
+  border : solid black 5px;
+  color: white;
     }
 
 .main_movie_container{
   display: flex;
-  
+  width : 90%;
+  height: 100%
     }
 .best_movie{
-    
-    background-size: auto;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
-    width: 50%
+    background-position: right;
+    width: 50%;
+    
 }
 
+.best_movie_datas{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap : 20%
+}
+
+.star_movie_resume{
+  max-width: 60%;
+  text-align: center;
+}
 
 
 
