--- a/styles/index.css
+++ b/styles/index.css
@@ -113,13 +113,14 @@ h3{
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: grey;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
   max-width: 600px;
   text-align: center;
+  color: white;
 }
 
 .close {
