--- a/styles/index.css
+++ b/styles/index.css
@@ -77,21 +77,21 @@ h3{
 }
 
 .carousel-images{
-    width: 90vh;
+    width: 120vh;
     display: flex;
     overflow: hidden;
     justify-content: center;
     align-items: center;
     border: solid red 5px;
     padding: 20px;
-    height: 20vh;
+    height: 40vh;
+    gap : 5px;
 }
 
 .carousel_img{
     width: 100%;
     height: 100%;
     object-fit: contain;
-    border-color: solid black 5px;
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
